output.txt
    Checking whispeer v0.1.0 (/home/makano/workspace/whispeer)
warning: unused import: `std::sync::Arc`
 --> src/plugins/manager.rs:3:5
  |
3 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the size for values of type `dyn StdError + Send + Sync` cannot be known at compilation time
   --> src/broker/broker.rs:174:109
    |
174 |       self.plugin_manager.read().await.on_message_received(&msg.topic, &mut msg.payload, &msg.headers).await?;
    |                                                                                                             ^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `dyn StdError + Send + Sync`
    = help: the trait `FromResidual<Result<Infallible, E>>` is implemented for `Result<T, F>`
    = note: required for `Box<dyn StdError + Send + Sync>` to implement `StdError`
    = note: required for `Box<dyn StdError>` to implement `From<Box<dyn StdError + Send + Sync>>`
    = note: required for `Result<(), Box<dyn StdError>>` to implement `FromResidual<Result<Infallible, Box<dyn StdError + Send + Sync>>>`

For more information about this error, try `rustc --explain E0277`.
warning: `whispeer` (lib) generated 1 warning
error: could not compile `whispeer` (lib) due to 1 previous error; 1 warning emitted
